@@ -3,11 +3,10 @@ package com.dtsx.astra.cli.utils;
 import com.dtsx.astra.cli.core.models.AstraToken;
 import com.dtsx.astra.cli.core.output.AstraColors;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.NonNull;
 import lombok.experimental.UtilityClass;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
-
-import java.util.UUID;
 
 @Slf4j
 @UtilityClass
@@ -16,24 +15,15 @@ public class StringUtils {
 
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
 
-    public static String removeQuotesIfAny(String str) {
-        if (str != null && str.length() >= 2 && ((str.startsWith("\"") && str.endsWith("\"")) || (str.startsWith("'") && str.endsWith("'")))) {
+    public static String removeQuotesIfAny(@NonNull String str) {
+        if (str.length() >= 2 && ((str.startsWith("\"") && str.endsWith("\"")) || (str.startsWith("'") && str.endsWith("'")))) {
             return str.substring(1, str.length() - 1);
         }
         return str;
     }
 
-    public static boolean isUUID(String str) {
-        try {
-            UUID.fromString(str);
-            return true;
-        } catch (IllegalArgumentException e) {
-            return false;
-        }
-    }
-
     public static String trimIndent(String input) {
-        return withIndent(input, 0);
+        return withIndent(input, "");
     }
 
     public static String withIndent(String input, int targetIndent) {
@@ -43,11 +33,11 @@ public class StringUtils {
     public static String withIndent(String input, String indentStr) {
         val lines = input.split("\n", -1);
 
-        val start = lines.length > 0 && stripAnsiCodes(lines[0]).trim().isEmpty()
+        val start = lines.length > 0 && stripAnsiCodes(lines[0]).isBlank()
             ? 1
             : 0;
 
-        val end = lines.length > 1 && stripAnsiCodes(lines[lines.length - 1]).trim().isEmpty()
+        val end = lines.length > 1 && stripAnsiCodes(lines[lines.length - 1]).isBlank()
             ? lines.length - 1
             : lines.length;
 
@@ -101,58 +91,33 @@ public class StringUtils {
         return AstraColors.NEUTRAL_400.use("# " + comment);
     }
 
-    public static String renderCommand(Iterable<? extends CharSequence> command, CharSequence extra) {
-        return renderCommand(String.join(" ", command) + " " + extra);
-    }
-
     public static String renderCommand(CharSequence command) {
         return AstraColors.BLUE_300.use("$ ") + command;
     }
 
-    public static String maskToken(String token) {
+    public static String maskToken(@NonNull String token) {
         return AstraToken.parse(token).fold(
             _ -> AstraColors.RED_500.use("<invalid_token('" + truncate(token, 4) + "')>"),
             AstraToken::toString
         );
     }
 
-    public static boolean isWhitespaceOnly(String str) {
-        if (str == null || str.isEmpty()) {
-            return true;
-        }
-
-        for (char c : str.toCharArray()) {
-            if (c != ' ' && c != '\t') {
-                return false;
-            }
-        }
-
-        return true;
+    public static boolean isPositiveInteger(@NonNull String str) {
+        return str.matches("\\d+");
     }
 
-    public static boolean isInteger(String str) {
-        if (str == null || str.isEmpty()) {
-            return false;
+    public static String truncate(@NonNull String str, int maxLength) {
+        if (maxLength <= 0) {
+            return "";
         }
-
-        for (char c : str.toCharArray()) {
-            if (!Character.isDigit(c)) {
-                return false;
-            }
-        }
-
-        return true;
-    }
-
-    public static String truncate(String str, int maxLength) {
-        if (str == null || str.length() <= maxLength) {
+        if (str.length() <= maxLength) {
             return str;
         }
         return str.substring(0, maxLength - 1) + "…";
     }
 
-    public static String capitalize(String str) {
-        if (str == null || str.isEmpty()) {
+    public static String capitalize(@NonNull String str) {
+        if (str.isEmpty()) {
             return str;
         }
         return Character.toUpperCase(str.charAt(0)) + str.substring(1);
